force-app/main/default/objects/Visit__c/fields/Amount_of_Additional_Staff_JA__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Additional_Staff_JA__c</fullName>
    <formula>Mitkan__r.Amount_of_additional_staff_of_JA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Additional Staff JA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>