force-app/main/default/objects/Visit__c/fields/Amount_of_CommunityW__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_CommunityW__c</fullName>
    <inlineHelpText>ERASE ME - ARTHUR TEST</inlineHelpText>
    <label>Amount of CommunityW</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>