force-app/main/default/objects/Visit__c/fields/Amount_of_Organic_Staff__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Organic_Staff__c</fullName>
    <formula>Mitkan__r.Amount_of_organic_staff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Organic Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>