force-app/main/default/objects/Visit__c/fields/Amount_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Volunteers__c</fullName>
    <formula>Mitkan__r.Amount_of_volunteers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>