force-app/main/default/objects/Visit__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מכינה</fullName>
            </value>
            <value>
                <fullName>עמיגור</fullName>
            </value>
            <value>
                <fullName>קהילות מפונים- מרחק בטוח עוטף</fullName>
            </value>
            <value>
                <fullName>מרכזי קליטה</fullName>
            </value>
            <value>
                <fullName>בתי חולים</fullName>
            </value>
            <value>
                <fullName>משב רוח שדרות</fullName>
            </value>
            <value>
                <fullName>ZOOM</fullName>
            </value>
            <value>
                <fullName>משב רוח - צפון הארץ</fullName>
            </value>
            <value>
                <fullName>משפחות אבלות</fullName>
            </value>
            <value>
                <fullName>פותחים עתיד</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>