force-app/main/default/objects/Visit__c/fields/Booking_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Booking_Person_Email__c</fullName>
    <label>Booking Person Email</label>
    <type>Email</type>
</CustomField>