force-app/main/default/objects/Visit__c/fields/Booking_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Person_Name__c</fullName>
    <label>Booking Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>