force-app/main/default/objects/Visit__c/fields/Booking_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Booking_Person_Phone__c</fullName>
    <label>Booking Person Phone</label>
    <type>Phone</type>
</CustomField>