force-app/main/default/objects/Visit__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JFNA</fullName>
            </value>
            <value>
                <fullName>Keren Hayesod</fullName>
            </value>
            <value>
                <fullName>Christians</fullName>
            </value>
            <value>
                <fullName>Jewish Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>