force-app/main/default/objects/Visit__c/fields/Community_in_War_Location__c.field-meta.xml
<CustomField>
    <fullName>Community_in_War_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community in War Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Community_in_War_Location__c.War_Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.Mitkan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Community_in_War_Location__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>