force-app/main/default/objects/Visit__c/fields/Create_PDF__c.field-meta.xml
<CustomField>
    <fullName>Create_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create PDF</label>
    <type>Checkbox</type>
</CustomField>