force-app/main/default/objects/Visit__c/fields/Current_Number_of_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Current_Number_of_Occupants__c</fullName>
    <formula>Mitkan__r.Current_Number_of_Occupants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Number of Occupants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>