force-app/main/default/objects/Visit__c/fields/Delegation__c.field-meta.xml
<CustomField>
    <fullName>Delegation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegation</label>
    <referenceTo>Delegation__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>