force-app/main/default/objects/Visit__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to get info for visit from contact</description>
    <label>Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits (RelationshipToContact)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>