force-app/main/default/objects/Visit__c/fields/Geographic_Location_Color__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Location_Color__c</fullName>
    <formula>TEXT( Mitkan__r.Geographic_Location_Colour__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geographic Location Color</label>
    <type>Text</type>
</CustomField>