force-app/main/default/objects/Visit__c/fields/Meeting_End_Time_frm__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_Time_frm__c</fullName>
    <formula>LEFT(TEXT(TIMEVALUE(  End_Date__c  +0.08334)),5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting End Time frm</label>
    <type>Text</type>
</CustomField>