force-app/main/default/objects/Visit__c/fields/Meeting_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Time__c</fullName>
    <label>Meeting Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>