force-app/main/default/objects/Visit__c/fields/Meeting_start_time_frm__c.field-meta.xml
<CustomField>
    <fullName>Meeting_start_time_frm__c</fullName>
    <formula>LEFT(TEXT(TIMEVALUE( Start_Date__c+0.08334 )),5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting start time frm</label>
    <type>Text</type>
</CustomField>