force-app/main/default/objects/Visit__c/fields/Mitkan__c.field-meta.xml
<CustomField>
    <fullName>Mitkan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mitkan</label>
    <referenceTo>War_location__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>