force-app/main/default/objects/Visit__c/fields/Mitkan_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Mitkan_Contact_Details__c</fullName>
    <formula>Mitkan__r.Contact_Name__c +&quot; &quot;+ Mitkan__r.Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mitkan Contact Details</label>
    <type>Text</type>
</CustomField>