force-app/main/default/objects/Visit__c/fields/Mitkan_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>Mitkan_Name_txt__c</fullName>
    <formula>Mitkan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mitkan Name txt</label>
    <type>Text</type>
</CustomField>