force-app/main/default/objects/Visit__c/fields/Number_of_vests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_vests__c</fullName>
    <label>Number of vests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>