force-app/main/default/objects/Visit__c/fields/Number_of_visitors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_visitors__c</fullName>
    <label>Number of visitors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>