force-app/main/default/objects/Visit__c/fields/Purpose_of_the_visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_the_visit__c</fullName>
    <label>Purpose of the visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>