force-app/main/default/objects/Visit__c/fields/Start_date_frm__c.field-meta.xml
<CustomField>
    <fullName>Start_date_frm__c</fullName>
    <formula>DATEVALUE( Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start date frm</label>
    <type>Date</type>
</CustomField>