force-app/main/default/objects/Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
                <default>true</default>
                <label>New Request</label>
            </value>
            <value>
                <fullName>Waiting for Confirmation from visitor</fullName>
            </value>
            <value>
                <fullName>Awaiting security clearance</fullName>
            </value>
            <value>
                <fullName>Confirmed by security</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Visit took place</fullName>
            </value>
            <value>
                <fullName>Visit not approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Transferred to</fullName>
            </value>
            <value>
                <fullName>Waiting for Confirmation from location</fullName>
                <isActive>false</isActive>
                <label>Waiting for Confirmation from location</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>