force-app/main/default/objects/Visit__c/fields/Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Status_Comments__c</fullName>
    <label>Status Comments</label>
    <length>150</length>
    <type>Text</type>
</CustomField>