force-app/main/default/objects/Visit__c/fields/The_location_of_the_visit__c.field-meta.xml
<CustomField>
    <fullName>The_location_of_the_visit__c</fullName>
    <label>The location of the visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>