force-app/main/default/objects/Visit__c/fields/Traffic_Light_Color__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Light_Color__c</fullName>
    <formula>Mitkan__r.Traffic_Light_Colour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traffic Light Color</label>
    <type>Text</type>
</CustomField>