force-app/main/default/objects/Visit__c/fields/Visit_Accompany__c.field-meta.xml
<CustomField>
    <fullName>Visit_Accompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Accompany</label>
    <referenceTo>Visit_Accompany__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>