force-app/main/default/objects/Visit__c/fields/Visit_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Visit_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>