force-app/main/default/objects/Visit__c/fields/Visit_location__c.field-meta.xml
<CustomField>
    <fullName>Visit_location__c</fullName>
    <label>Visit location</label>
    <type>TextArea</type>
</CustomField>