force-app/main/default/objects/Visit__c/fields/War_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>War_Location_Type__c</fullName>
    <formula>TEXT(Mitkan__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>War Location Type</label>
    <type>Text</type>
</CustomField>