force-app/main/default/objects/Visit__c/validationRules/Booking_P_details_exist_when_vests_taken.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_P_details_exist_when_vests_taken</fullName>
    <active>true</active>
    <description>IF the number of vests &gt; 0 then email and phone of the booking person exist.</description>
    <errorConditionFormula>AND(Number_of_vests__c&gt;0,
    OR(ISBLANK(Booking_Person_Email__c),
     ISBLANK(Booking_Person_Phone__c),
     ISBLANK(Booking_Person_Name__c)))</errorConditionFormula>
    <errorDisplayField>Number_of_vests__c</errorDisplayField>
    <errorMessage>כאשר מספר אפודים גדול מאפס יש להזין את כתובת המייל והמספר טלפון ושם של מזמין הביקור</errorMessage>
</ValidationRule>