force-app/main/default/objects/Visit__c/validationRules/Contact_Or_Mitkan.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Or_Mitkan</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Contact__c) &amp;&amp; ISBLANK(Mitkan__c)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>מתקן או איש קשר חייב להיות מלא</errorMessage>
</ValidationRule>