force-app/main/default/objects/Visit__c/listViews/Confirmed.listView-meta.xml
<ListView>
    <fullName>Confirmed</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>The_location_of_the_visit__c</columns>
    <columns>Mitkan__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>ביקורים סטטוס אושר</label>
    <sharedTo>
        <group>War_Control_Center</group>
    </sharedTo>
</ListView>