force-app/main/default/objects/Visit__c/listViews/security_confirmed.listView-meta.xml
<ListView>
    <fullName>security_confirmed</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>The_location_of_the_visit__c</columns>
    <columns>Mitkan__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed by security</value>
    </filters>
    <label>ביקורים בסטטוס אושר ע&quot;י בטחון</label>
</ListView>