force-app/main/default/objects/Visit__c/listViews/transferred_status.listView-meta.xml
<ListView>
    <fullName>transferred_status</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Status_Comments__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>The_location_of_the_visit__c</columns>
    <columns>Mitkan__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Transferred to</value>
    </filters>
    <label>ביקורים סטטוס הועבר ל</label>
</ListView>