force-app/main/default/objects/Visit__c/listViews/waiting_securuty.listView-meta.xml
<ListView>
    <fullName>waiting_securuty</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>The_location_of_the_visit__c</columns>
    <columns>Mitkan__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting security clearance</value>
    </filters>
    <label>ביקורים בסטטוס ממתין לאישור בטחוני</label>
</ListView>